# wedding-media-platform

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  GIT_GUIDE.md  LICENSE  PHASE1_COMPLETE.md  PODMAN_SETUP.md  README.md  README_SETUP.md  SECURITY.md  SECURITY_FIXES.md  docker-compose.yml  progress.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml
.windsurf/rules/: backend-rules.md  frontend-rules.md  project-rules.md  testing-rules.md
.windsurf/workflows/: add-feature.md  create-adr.md  deploy.md  fix-bug.md  onboard.md  refactor.md  setup-environment.md  write-tests.md
backend/: .env.dev  .env.example  .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  event_config.py  media.py  refresh_token.py  user.py
backend/app/routers/: auth.py  media.py
backend/app/schemas/: __init__.py  auth.py  media.py
backend/app/services/: auth.py  deduplication.py  media.py  storage.py
backend/app/workers/: celery_app.py  media_processing.py
backend/scripts/: seed_admin.py  setup_minio.py  start_worker.py
backend/tests/: conftest.py  test_auth.py
docs/: CODING_STANDARDS.md  GETTING_STARTED.md  PRODUCT_SPEC.html  PRODUCT_SPEC.md  PROJECT_STRUCTURE.md  TESTING_STRATEGY.md
docs/adr/: 001-technology-stack.md  002-authentication-strategy.md  003-media-storage-strategy.md  004-internationalization-strategy.md  005-duplicate-detection-strategy.md  README.md
docs/api/: API_DESIGN.md
docs/architecture/: ARCHITECTURE.md  data-models.md
docs/features/: _TEMPLATE.md
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/app/(main)/admin/: page.tsx
frontend/src/app/(main)/gallery/: page.tsx
frontend/src/app/(main)/profile/: page.tsx
frontend/src/app/(main)/upload/: page.tsx
frontend/src/components/gallery/: Lightbox.tsx  MediaGrid.tsx  MediaThumbnail.tsx
frontend/src/components/layout/: LanguageSwitcher.tsx  Navbar.tsx
frontend/src/components/upload/: UploadFileRow.tsx  UploadZone.tsx
frontend/src/lib/: hash.ts  i18n.ts
frontend/src/lib/api/: auth.ts  client.ts  index.ts  media.ts
frontend/src/locales/en/: common.json
frontend/src/locales/ru/: common.json
frontend/src/locales/zh/: common.json
frontend/src/store/: auth.ts
frontend/src/types/: index.ts
