[project]
name = "wedding-media-platform-backend"
version = "1.0.0"
description = "Wedding Media Platform Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.27",  # Fixed: CVE-2024-24762, CVE-2024-53981, CVE-2026-24486, CVE-2026-42561
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "python-jose[cryptography]==3.4.0",  # Fixed: CVE-2024-33663 (CRITICAL)
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "redis==5.0.1",
    "hiredis==2.3.2",
    "boto3==1.34.34",
    "oss2==2.18.4",
    "celery==5.3.6",
    "flower==2.0.1",
    "Pillow==12.2.0",  # Fixed: CVE-2024-28219, CVE-2026-25990, CVE-2026-40192, CVE-2026-42311
    "python-magic==0.4.27",
    "ffmpeg-python==0.2.0",
    "Babel==2.14.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0",
    "httpx==0.26.0",
    "python-slugify==8.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "ruff==0.1.14",
    "black==24.1.1",
    "mypy==1.8.0",
    "isort==5.13.2",
    "ipython==8.20.0",
    "ipdb==0.13.13",
    "factory-boy==3.3.0",
    "faker==22.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []  # No packages yet - Phase 1 foundation only

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | alembic/versions
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=app --cov-report=term-missing"
asyncio_mode = "auto"
